<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.core.widget.NestedScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">
                <ImageView
                    android:id="@+id/movie_detail_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_camera"
                    app:layout_collapseMode="pin"
                    app:layout_collapseParallaxMultiplier="0.7"
                    android:contentDescription="@string/movie_poster" />

                <TextView
                    android:id="@+id/movie_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:shadowColor="#000000"
                    android:shadowDx="0"
                    android:shadowDy="2"
                    android:shadowRadius="20"
                    android:textColor="#dfdfdf"
                    android:textSize="28sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toTopOf="@+id/movie_detail_rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Movie Title" />

                <RatingBar
                    android:id="@+id/movie_detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    style="?android:attr/ratingBarStyle"
                    android:progressTint="#ffd700"
                    android:backgroundTint="#ffd700"
                    android:secondaryProgressTint="#ffd700"
                    android:progressBackgroundTint="#aaafafaf"
                    android:numStars="10"
                    android:stepSize="0.01"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp"
                    android:isIndicator="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:layout_marginStart="12dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.core.widget.NestedScrollView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/released_date"
                                    android:textColor="@color/dark_grey"
                                    android:textSize="16sp"
                                    android:textStyle="bold|italic" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:src="@drawable/ic_today_black_24dp"
                                        app:tint="@color/dark_grey"
                                        tools:ignore="TooDeepLayout" />

                                    <Space
                                        android:layout_width="10dp"
                                        android:layout_height="match_parent" />

                                    <TextView
                                        android:id="@+id/movie_detail_date"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:textColor="@color/dark_grey"
                                        android:textSize="16sp"
                                        android:textStyle="bold"
                                        tools:text="October 2, 2019" />
                                </LinearLayout>
                            </LinearLayout>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/duration"
                                android:textColor="@color/dark_grey"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/baseline_access_time_24"
                                    app:tint="@color/dark_grey"
                                    tools:ignore="TooDeepLayout" />

                                <Space
                                    android:layout_width="10dp"
                                    android:layout_height="match_parent" />

                                <TextView
                                    android:id="@+id/movie_detail_runtime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:textColor="@color/dark_grey"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    tools:text="October 2, 2019" />
                            </LinearLayout>
                        </LinearLayout>


                    </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:orientation="vertical"

                            android:padding="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/overview"
                                android:textColor="#050505"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <TextView
                                android:id="@+id/movie_detail_overview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="#1a1a1a"
                                android:textSize="16sp"
                                tools:text="@string/overview" />
                        </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="@dimen/space"
                        android:layout_height="wrap_content">
                        <TableRow
                            android:layout_marginBottom="@dimen/space_8"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/genre"
                                android:textColor="#050505"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />
                            <Space android:layout_width="@dimen/space"/>
                            <TextView
                                android:id="@+id/movie_detail_genre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#1a1a1a"
                                android:textSize="16sp"
                                tools:text="@string/genre" />
                        </TableRow>
                        <TableRow
                            android:layout_marginBottom="@dimen/space_8">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/director"
                                android:textColor="#050505"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <Space android:layout_width="@dimen/space"/>
                            <TextView
                                android:id="@+id/movie_detail_director"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#1a1a1a"
                                android:textSize="16sp"
                                tools:text="@string/director" />
                        </TableRow>
                        <TableRow android:layout_marginBottom="@dimen/space_8">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/actors"
                                android:textColor="#050505"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <Space android:layout_width="@dimen/space"/>
                            <TextView
                                android:id="@+id/movie_detail_actors"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#1a1a1a"
                                android:textSize="16sp"
                                tools:text="@string/actors" />
                        </TableRow>
                    </TableLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#ccc"
        app:backgroundTint="#aaa"
        app:elevation="10dp"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="28dp"

        app:rippleColor="#999999"
        app:srcCompat="@drawable/ic_favorite_on" />

</androidx.constraintlayout.widget.ConstraintLayout>
